# Ironbeard-MCP-Filesystem

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
src/: config.rs  error.rs  lib.rs  main.rs  security.rs  server.rs  service.rs
src/tools/: destructive.rs  info.rs  list.rs  mod.rs  read.rs  search.rs  util.rs  write.rs
