[package]
name = "ironbeard-mcp-filesystem"
version = "0.1.0"
edition = "2024"
authors = ["Ironbeard <Ironbeardai@gmail.com>"]
license = "MIT"
description = "A secure filesystem MCP server with read-only and write-gated operations"
readme = "README.md"
repository = "https://github.com/Alatar86/Ironbeard-MCP-Filesystem"
homepage = "https://github.com/Alatar86/Ironbeard-MCP-Filesystem"
keywords = ["mcp", "filesystem", "security", "llm"]
categories = ["filesystem", "command-line-utilities"]

[dependencies]
rmcp = { version = "0.15", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
clap = { version = "4", features = ["derive"] }
globset = "0.4"
mime_guess = "2"
anyhow = "1"
thiserror = "2"
similar = "2"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3"
